syntax = "proto3";

package gRPCDemo;

service gRPC {
	rpc SayHello (HelloRequest) returns (HelloReply) {}

	rpc ServerStreamSayHello(HelloRequest) returns (stream HelloReply) {}

	rpc ClientStreamSayHello(stream HelloRequest) returns (HelloReply) {}

	rpc biStreamSayHello(stream HelloRequest) returns (stream HelloReply) {}
}



message HelloRequest {
	string name = 1;
}

message HelloReply {
	string message = 1;
}